[tool.poetry]
name = "openaev-openaev-collector"
version = "2.260717.0"
description = "A Collector for fetching OpenAEV payloads"
authors = [
    "Filigran <contact@filigran.io>",
]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "openaev" },
]

[tool.poetry.dependencies]
python = "^3.11"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'prod' and extra != 'dev'"
version = "2.260717.0"
source = "pypi"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'dev' and extra != 'prod'"
path = "../../client-python"
develop = true

[tool.poetry.extras]
prod = [
    "pyoaev",
]
dev = [
    "pyoaev",
]

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m openaev.openaev_openaev --dump-config-schema"
icon-path = "openaev/img/icon-openaev.png"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
