[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "src" }, { include = "tests" }]

[project]
name = "palo-alto-cortex-xdr"
version = "2.2.0"
description = "Collector for Palo Alto Cortex XDR EDR."
readme = "README.md"

Homepage = "https://filigran.io/"
Repository = "https://github.com/OpenAEV-Platform/collectors/tree/main/palo-alto-cortex-xdr"
Documentation = "https://github.com/OpenAEV-Platform/collectors/blob/main/palo-alto-cortex-xdr/README.md"
Issues = "https://github.com/OpenAEV-Platform/collectors/issues"

requires-python = ">=3.12"

[tool.poetry.dependencies]
pyoaev = [
    {markers = "extra == 'prod' and extra != 'local' and extra != 'current'",version = "^2.0.2"},
    {markers = "extra == 'local' and extra != 'current' and extra != 'prod'",path = "../../client-python", develop = true},
]
pydantic = "^2.11.7"
pydantic-settings = "^2.11.0"
requests = "^2.32.5"

[tool.poetry.extras]
prod = ["pyoaev"]
local = ["pyoaev"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.13"
ty = "^0.0.13"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
factory-boy = "^3.3.3"

[project.scripts]
PaloAltoCortexXDRCollector = "src.__main__:main"

[tool.pytest.ini_options]
testpaths = ["./tests"]
