[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" },
    { include = "tests" },
]

[tool.poetry.dependencies]
pydantic = "*"
pydantic-settings = "*"
requests = "^2.32.5"
urllib3 = "^2.6.3"
msticpy = "^3.0.1"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'prod' and extra != 'local' and extra != 'current'"
version = "2.260710.0"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'local' and extra != 'current' and extra != 'prod'"
path = "../../client-python"
develop = true

[tool.poetry.extras]
prod = [
    "pyoaev",
]
local = [
    "pyoaev",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.13"
ty = "^0.0.13"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
factory-boy = "^3.3.3"

[tool.pytest.ini_options]
testpaths = [
    "./tests",
]

[tool.cmw]
install-command = "poetry install --extras local"
config-dump-command = "poetry run python -m src --dump-config-schema"
icon-path = "src/img/palo-alto-cortex-xsoar-logo.png"

[project]
name = "palo-alto-cortex-xsoar"
version = "2.260710.0"
description = "Collector for Palo Alto Cortex XSOAR EDR."
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = [
    "dependencies",
]
Homepage = "https://filigran.io/"
Repository = "https://github.com/OpenAEV-Platform/collectors/tree/main/palo-alto-cortex-xsoar"
Documentation = "https://github.com/OpenAEV-Platform/collectors/blob/main/palo-alto-cortex-xsoar/README.md"
Issues = "https://github.com/OpenAEV-Platform/collectors/issues"

[project.scripts]
PaloAltoCortexXSOARCollector = "src.__main__:main"
