[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" },
    { include = "tests" },
]

[tool.poetry.dependencies]
pydantic = "^2.11.7"
pydantic-settings = "^2.11.0"
requests = "~2.33.0"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'prod' and extra != 'local' and extra != 'current'"
version = "2.260715.0"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'local' and extra != 'current' and extra != 'prod'"
path = "../../client-python"
develop = true

[tool.poetry.extras]
prod = [
    "pyoaev",
]
local = [
    "pyoaev",
]

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
ruff = "^0.12.11"
mypy = "^1.17.1"
black = "^25.1.0"
flake8 = "^7.3.0"
pip-audit = "^2.9.0"
pre-commit = "^4.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
polyfactory = "^2.22.2"

[tool.pytest.ini_options]
testpaths = [
    "./tests",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "I001",
    "D203",
    "E501",
    "F821",
    "D205",
    "D213",
    "D211",
    "G004",
    "TRY003",
    "D104",
    "D407",
    "D408",
    "D409",
]
select = [
    "E",
    "F",
    "W",
    "D",
    "G",
    "T",
    "B",
    "C",
    "N",
    "I",
    "S",
]

[tool.mypy]
strict = true
exclude = [
    "^tests",
    "^docs",
    "^build",
    "^dist",
    "^venv",
    "^site-packages",
    "^__pypackages__",
    "^.venv",
]
plugins = [
    "pydantic.mypy",
]

[tool.cmw]
install-command = "poetry install --extras local"
config-dump-command = "poetry run python src --dump-config-schema"
icon-path = "src/img/splunk-logo.png"

[project]
name = "SplunkESCollector"
version = "2.260715.0"
description = "Collector for Splunk Enterprise Security."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dynamic = [
    "dependencies",
]

[project.scripts]
SplunkESCollector = "src.__main__:main"
