[tool.poetry]
name = "openaev-collector-wazuh"
version = "1.0.0"
description = "OpenAEV collector for Wazuh SIEM"
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "wazuh_collector"}]

[tool.poetry.dependencies]
python = "^3.11"
pyoaev = { version = "2.0.2", optional = true }
opensearch-py = "^2.4.0"
python-dateutil = "^2.8.0"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[tool.poetry.extras]
prod = ["pyoaev"]

[tool.poetry.scripts]
wazuh-collector = "wazuh_collector.collector:run_collector"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=wazuh_collector --cov-report=term-missing"
